--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=server
 
-spring.datasource.url=jdbc:postgresql://aws-0-ap-southeast-1.pooler.supabase.com:5432/postgres?user=postgres.vpfsiphlxxabqdvgqurc&password=Connect_2025
+spring.datasource.url=jdbc:postgresql://aws-0-ap-southeast-1.pooler.supabase.com:5432/postgres?user=postgres.foigmboiuezycygwcqmd&password=Connect_2025
 spring.datasource.username=postgres
 spring.datasource.password=Connect_2025
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
